--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/JF.png" style="background-image: url(&quot;img/JF.png&quot;);"></div>
                                 </li>
-                                <li><a href="https://www.utomik.com" target="_blank" class="dark">JF Car Dealership</a></li>
+                                <li>JF Car Dealership</a></li>
                                 <li>An e-commerce website for cars.</li>
                                 <li class="tech-stack">
                                     <div class="card mn-margin-r"><i class="fa-brands fa-angular"></i><span>AngularJs</span></div>
@@ -144,7 +144,7 @@
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/tbmilktea.png" style="background-image: url(&quot;img/tbmilktea.png&quot;);"></div>
                                 </li>
-                                <li><a href="https://www.dealsuite.com/en" target="_blank" class="dark">Thirsty Bastard</a></li>
+                                <li>Thirsty Bastard</li>
                                 <li>A e-commerce website for milk tea that is made from wordpress and have an integrated Google Analytics for SEO.</li>
                                 <li class="tech-stack">
                                     <div class="card mn-margin-r"><i class="fa-brands fa-wordpress"></i><span>Wordpress</span></div>
@@ -156,7 +156,7 @@
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/RRResto.png" style="background-image: url(&quot;img/RRResto.png&quot;);"></div>
                                 </li>
-                                <li><a href="http://patientbubble.com" target="_blank" class="dark">R and R Resto</a></li>
+                                <li>R and R Resto</li>
                                 <li>Restaurant Locator Web Application</li>
                                 <li class="tech-stack">
                                     <div class="card mn-margin-r"><i class="fa-brands fa-php"></i><span>PHP</span></div>
@@ -169,7 +169,7 @@
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/Foodie.png" style="background-image: url(&quot;img/Foodie.png&quot;);"></div>
                                 </li>
-                                <li><a href="https://grid.f2x.nl" target="_blank" class="dark">Foodie</a></li>
+                                <li>Foodie</li>
                                 <li>An e-commerce website application for Fast Food
                                 </li>
                                 <li class="tech-stack">
@@ -183,7 +183,7 @@
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/beanscafe.png" style="background-image: url(&quot;img/beanscafe.png&quot;);"></div>
                                 </li>
-                                <li><a href="https://my.fiber.nl" target="_blank" class="dark">Beans Cafe</a></li>
+                                <li>Beans Cafe</li>
                                 <li>An e-commerce website application for Cafe</li>
                                 <li class="tech-stack">
                                     <div class="card mn-margin-r"><i class="fa-brands fa-php"></i><span>PHP</span></div>
@@ -196,7 +196,7 @@
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/LoanAssessment.png" style="background-image: url(&quot;img/LoanAssessment.png&quot;);"></div>
                                 </li>
-                                <li><a href="https://www.grip-facility.com/en/" target="_blank" class="dark">House Loan Assessment</a></li>
+                                <li>House Loan Assessment</li>
                                 <li>A Python desktop application that assess if the user is eligible for a house loan.</li>
                                 <li class="tech-stack">
                                     <div class="card mn-margin-r"><i class="fa-brands fa-python"></i><span>Python</span></div>
@@ -206,7 +206,7 @@
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/Order.png" style="background-image: url(&quot;img/Order.png&quot;);"></div>
                                 </li>
-                                <li><a href="https://play.google.com/store/apps/details?id=com.meralco.phone.move&hl=en&gl=US" target="_blank" class="dark">Simple Point of Sale System for a Fastfood chain </a></li>
+                                <li>Simple Point of Sale System for a Fastfood chain</li>
                                 <li>A Java Desktop Application</li>
                                 <li class="tech-stack">
                                     <div class="card mn-margin-r"><i class="fa-brands fa-java"></i><span>Java</span></div>
