--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <h3>Portfolio</h3>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/JF.png" style="background-image: url(&quot;img/JF.png&quot;);"></div>
+                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/jf.png" style="background-image: url(&quot;img/jf.png&quot;);"></div>
                                 </li>
                                 <li>JF Car Dealership</a></li>
                                 <li>An e-commerce website for cars.</li>
@@ -154,7 +154,7 @@
                             </ul>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/RRResto.png" style="background-image: url(&quot;img/RRResto.png&quot;);"></div>
+                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/resto.png" style="background-image: url(&quot;img/resto.png&quot;);"></div>
                                 </li>
                                 <li>R and R Resto</li>
                                 <li>Restaurant Locator Web Application</li>
@@ -167,7 +167,7 @@
                             </ul>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/Foodie.png" style="background-image: url(&quot;img/Foodie.png&quot;);"></div>
+                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/foodie.png" style="background-image: url(&quot;img/foodie.png&quot;);"></div>
                                 </li>
                                 <li>Foodie</li>
                                 <li>An e-commerce website application for Fast Food
@@ -194,7 +194,7 @@
                             </ul>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/LoanAssessment.png" style="background-image: url(&quot;img/LoanAssessment.png&quot;);"></div>
+                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/loan.png" style="background-image: url(&quot;img/loan.png&quot;);"></div>
                                 </li>
                                 <li>House Loan Assessment</li>
                                 <li>A Python desktop application that assess if the user is eligible for a house loan.</li>
@@ -204,7 +204,7 @@
                             </ul>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/Order.png" style="background-image: url(&quot;img/Order.png&quot;);"></div>
+                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/order.png" style="background-image: url(&quot;img/order.png&quot;);"></div>
                                 </li>
                                 <li>Simple Point of Sale System for a Fastfood chain</li>
                                 <li>A Java Desktop Application</li>
