--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Name of your web site">
-        <meta name="author" content="Marketify">
+        <meta name="description" content="John Rubin's Portfolio">
+        <meta name="author" content="John Rubin Mora">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>John Rubin - Portfolio</title>
         <link
