--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="container">
                                 <div class="description">
                                     <h3>Profile</h3>
-                                    As an Information Technology student, I am deeply passionate about developing websites that are both visually appealing and highly functional. I have an understanding of a variety of Web and Mobile Development technologies, including PHP, Python, Angular, and Dart. Whether working independently or as part of a team, I am able to effectively manage myself and collaborate with others to ensure successful project outcomes.
+                                    I have a strong passion for creating websites that look great and work smoothly. I'm experienced with various web and mobile development tools like JavaScript, Python, Angular, and Dart. Whether I’m working solo or with a team, I can manage tasks well and collaborate effectively to make sure projects succeed.
                                 </div>
                             </div>
                         </div>
@@ -114,7 +114,6 @@
                                         <li class="card"><i class="fa-solid fa-database"></i><span>MongoDB</span></li>
                                         <li class="card"><i class="fa-brands fa-wordpress"></i><span>Wordpress</span></li>
                                         <li class="card"><i class="fa-solid fa-mobile"></i><span>Flutter</span></li>
-
                                     </ul>
                                     <h3 class="grey-dark mn-pad-top">Platform, Container and Tools</h3>
                                     <ul>
@@ -130,16 +129,6 @@
                     <div id="portfolio" class="portfolio mn-wrap-space-top">
                         <div class="container">
                             <h3>Portfolio</h3>
-                            <ul class="space-bottom white-box">
-                                <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/jf.png" style="background-image: url(&quot;img/jf.png&quot;);"></div>
-                                </li>
-                                <li>JF Car Dealership</a></li>
-                                <li>An e-commerce website for cars.</li>
-                                <li class="tech-stack">
-                                    <div class="card mn-margin-r"><i class="fa-brands fa-angular"></i><span>AngularJs</span></div>
-                                </li>
-                            </ul>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
                                     <div class="image" onclick="handleClick(this, event)" data-img-url="img/tbmilktea.png" style="background-image: url(&quot;img/tbmilktea.png&quot;);"></div>
@@ -194,25 +183,27 @@
                             </ul>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/loan.png" style="background-image: url(&quot;img/loan.png&quot;);"></div>
+                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/jms.jpg" style="background-image: url(&quot;img/jms.jpg&quot;);"></div>
                                 </li>
-                                <li>House Loan Assessment</li>
-                                <li>A Python desktop application that assess if the user is eligible for a house loan.</li>
+                                <li>Journal Management System</li>
+                                <li>A website for journal submission and peer reviewing</li>
                                 <li class="tech-stack">
-                                    <div class="card mn-margin-r"><i class="fa-brands fa-python"></i><span>Python</span></div>
+                                    <div class="card mn-margin-r"><i class="fa-brands fa-angular"></i><span>Angular</span></div>
+                                    <div class="card mn-margin-r"><i class="fa-brands fa-code"></i><span>ExpressJs</span></div>
+                                    <div class="card mn-margin-r"><i class="fa-solid fa-database"></i><span>MongoDB</span></div>
                                 </li>
                             </ul>
                             <ul class="space-bottom white-box">
                                 <li class="space-bottom-sub">
-                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/order.png" style="background-image: url(&quot;img/order.png&quot;);"></div>
+                                    <div class="image" onclick="handleClick(this, event)" data-img-url="img/currency.jpg" style="background-image: url(&quot;img/currency.jpg&quot;);"></div>
                                 </li>
-                                <li>Simple Point of Sale System for a Fastfood chain</li>
-                                <li>A Java Desktop Application</li>
+                                <li>Currency Conversion</li>
+                                <li>A flutter application that is used for converting currency to another</li>
                                 <li class="tech-stack">
-                                    <div class="card mn-margin-r"><i class="fa-brands fa-java"></i><span>Java</span></div>
+                                    <div class="card mn-margin-r"><i class="fa-solid fa-mobile"></i><span>Flutter</span></div>
+                                    <div class="card mn-margin-r"><i class="fa-brands fa-code"></i>Dart</span></div>
                                 </li>
                             </ul>
-                            
                         </div>
                     </div>
                     <div id="education" class="education mn-wrap-space-top">
