--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                                         <li class="card"><i class="fa-brands fa-html5"></i><span>HTML</span></li>
                                         <li class="card"><i class="fa-brands fa-css3"></i><span>CSS</span></li>
                                         <li class="card"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap</span></li>
+										<li class="card"><i class="fa-brands fa-code"></i><span>TypeScript</span></li>
                                     </ul>
                                     <h3 class="grey-dark mn-pad-top">Backend/Framework</h3>
                                     <ul class="justify-left">
